--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "audio-director",
-  "version": "0.0.15",
+  "version": "0.0.17",
   "description": "Manage browser audio sources and playback",
   "main": "./index.js",
   "scripts": {
@@ -9,7 +9,8 @@
     "watch:example": "watchify example/main.js -o example/bundle.js",
     "build:example": "browserify example/main.js -o example/bundle.js",
     "build": "browserify index.js -o dist/audio-director.js",
-    "docs": "jsdoc -R README.md ./lib -c jsdoc.json -r -d docs/"
+    "docs": "jsdoc -R README.md ./lib -c jsdoc.json -r -d docs/",
+    "docs:md": "jsdoc2md lib/player.js"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,12 @@
   "homepage": "https://github.com/miguelmota/audio-director",
   "devDependencies": {
     "browserify": "^14.4.0",
+    "eslint": "^4.4.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "jsdoc": "^3.5.3",
     "jsdoc-oblivion": "0.0.9",
     "tape": "^3.0.3",
