--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "audio-director",
-  "version": "0.0.18",
+  "version": "0.0.19",
   "description": "Manage browser audio sources and playback",
   "main": "./index.js",
   "scripts": {
@@ -29,7 +29,7 @@
   },
   "license": {
     "type": "MIT",
-    "url": "https://github.com/miguelmota/audio-director/blob/master/LICENSE.md"
+    "url": "https://github.com/miguelmota/audio-director/blob/master/LICENSE"
   },
   "bugs": {
     "url": "https://github.com/miguelmota/audio-director/issues"
